--- a/src/main/resources/templates/invoice-created-form.html
+++ b/src/main/resources/templates/invoice-created-form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form th:action = "@{/invoice}" method = "POST" th:object=" ${invoiceForm}">                               <!-- Object specifie lidentifiant de l"object a modifié, ou on met invoice et on supprime le nom donné dans le controlleur  -->
+<form th:action = "@{/invoice/create}" method = "POST" th:object=" ${invoiceForm}">                               <!-- Object specifie lidentifiant de l"object a modifié, ou on met invoice et on supprime le nom donné dans le controlleur  -->
 
     <p>Customer name<input type="text" th:field="*{customerName}"/></p>                                  <!-- Spring MVC va utiliser le setter des proprietes pour leur attribuer une valeur -->
     <div th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}"></div>
