--- a/src/main/resources/templates/invoice-home.html
+++ b/src/main/resources/templates/invoice-home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Application de gestion de facture</title>
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
 </head>
 <body>
 <h1>Bienvenu dans la page de gestion des factures</h1>
@@ -10,14 +11,22 @@
     <ul>
         <li><a href="create-form">Ajout de facture</a></li>
     </ul>
-<table border="1">                                                                          <!--Pour retourner le resultat sous la forme dun tableau-->
-                                                                                            <!--tr et td  pour lignes et les colonnes d<un tableau-->
-    <tr th:each="invoice: ${invoices}">                                                     <!--Nous utilisons ${invoices} pour recuperer les elts de la liste invoices et invoice: est le nomn que nous donnons a chaque elt de la liste pour travailler avec-->
-        <td>
-        <a th:href ="${invoice.number}" th:text="${invoice.number}"/>                     <!-- lien sur number qui mene vers les details de number-->
-        </td>
-        <td th:text="${invoice.customerName}"></td>
-    </tr>
-</table>
+
+<section class="container">
+    <div class="left-half">
+        <artiicle id="invoice-list">
+
+
+        </artiicle>
+    </div>
+    <div class="right-half">
+        <artiicle id="invoice-detail">
+
+
+        </artiicle>
+    </div>
+
+</section>
+<script th:src="@{/js/script.js}"></script>
 </body>
 </html>
